Version 2.1
Running with JRE21