@@ -13,30 +13,17 @@
     
     <!-- Το παρακάτω Target Δημιουργεί ένα FAT Jar -->
     <target name="00-Release-Fat-Jar" depends="jar">
-        <!-- Change the value of this property to be the name of your JAR,
-             minus the .jar extension. It should not have spaces.
-             <property name="store.jar.name" value="MyJarName"/>
-        -->
         <property name="store.jar.name" value="PDFCompressor"/>
         <!-- don't edit below this line -->
         <property name="store.dir" value="00_Release"/>
         <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
-        <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+        
         <delete dir="${store.dir}"/>
         <mkdir dir="${store.dir}"/>
-       
-        <!-- Κάνει Unzip το jre.zip στο /jre του Build  -->
-        <unzip src="BundledJRE/jre.zip" dest="${store.dir}/jre"/>
         
-        <!-- Για να κάνει copy το Prerequisites στο directory 00-Release-Fat-Jar -->
-        <copy todir="${store.dir}/Prerequisites">
-            <fileset dir="Prerequisites"/>
-        </copy>
-         
         <!-- Φτιάξε το Fat Jar-->
         <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
             <zipgroupfileset dir="dist" includes="*.jar"/>
-            <!--<zipgroupfileset dir="dist/lib" includes="*.jar"/>-->
             <manifest>
                 <attribute name="Main-Class" value="${main.class}"/>
             </manifest>
@@ -44,15 +31,44 @@
         <zip destfile="${store.jar}">
             <zipfileset src="${store.dir}/temp_final.jar" excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
         </zip>
+        <waitfor maxwait="30" maxwaitunit="second">
+            <available file="${store.dir}/temp_final.jar"/>
+        </waitfor>
         <delete file="${store.dir}/temp_final.jar"/>
         
-        <!-- Τρέχω το launch4j για να κάνει το exe  -->
-        <exec executable="C:\Program Files (x86)\Launch4j\launch4j.exe">
-            <arg value="C:\Development\pdf-compressor\Launch4J\PDFCompressor - With Bundled JRE.xml"/>
+        <!-- Δημιουργώ JRE-->
+        <echo message="Generating JRE..."/>
+        <exec executable="jlink">
+            <arg value="--output"/>
+            <arg value="${store.dir}/jre"/>
+            <arg value="--add-modules"/>
+            <arg value="ALL-MODULE-PATH"/>
+            <arg value="--strip-debug"/>
+            <arg value="--no-man-pages"/>
         </exec>
         
+        <!-- Για να κάνει copy το Prerequisites στο directory 00-Release-Fat-Jar -->
+        <echo message="Copying prerequisites..."/>
+        <copy todir="${store.dir}/Prerequisites">
+            <fileset dir="Prerequisites"/>
+        </copy>
+               
+        <!-- Τρέχω το launch4j για να κάνει το exe  -->
+        <echo message="Launching Launch4j..."/>
+        <exec executable="C:/Program Files (x86)/Launch4j/launch4j.exe">
+            <arg value="C:/Development/pdf-compressor/Launch4J/PDFCompressor - With Bundled JRE.xml"/>
+        </exec>
+        
+        <!-- Περίμενε να γίνει το Exe -->
+        <echo message="Waiting for exe to be generated..."/>
+        <waitfor maxwait="30" maxwaitunit="second">
+            <available file="${store.dir}/PDFCompressor.exe"/>
+        </waitfor>
+        <delete file="${store.jar}"/>
+        
+
         <!-- Sign the exe-->
-        <exec executable="C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x86\signtool.exe">
+        <!--<exec executable="C:/Program Files (x86)/Windows Kits/10/bin/10.0.22621.0/x86/signtool.exe">
             <arg value="sign"/>
             <arg value="/tr"/>
             <arg value="http://timestamp.digicert.com"/>
@@ -61,9 +77,9 @@
             <arg value="/fd"/>
             <arg value="sha256"/>
             <arg value="/a"/>
-            <arg value="C:\Development\pdf-compressor\NetBeansProject\00_Release\PDFCompressor.exe"/>
-        </exec>
-
-      
+            <arg value="${store.dir}/PDFCompressor.exe"/>
+        </exec>-->
+        
     </target>
+
 </project>
